# tklb

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
experiments/: ExpAsm.cpp  ExperimentsCommon.hpp  string.cpp
src/memory/: TAllocator.hpp  TFixedPool.hpp  TMemory.hpp  TMemoryCheck.hpp  TMemoryManager.hpp  TMemoryMonkeyPatch.hpp  TMemoryOverload.hpp  TMemoryPool.hpp  TMemoryPoolStack.hpp  TMemoryPoolStd.hpp  TMemoryTracing.hpp  TMemoryUtil.hpp  TNew.hpp
src/types/: TDelegate.hpp  TEventBus.hpp  TFile.hpp  THandleBuffer.hpp  THeapBuffer.hpp  TLockGuard.hpp  TMutex.hpp  TMutexDummy.hpp  TSpinLock.hpp  TStackBuffer.hpp  TString.hpp  (+1 more)
tests/: TAudioBuffer.cpp  TBus.cpp  TConvolver.cpp  TLeakChecker.cpp  TPointerList.cpp  TResampler.cpp  TRingBuffer.cpp  TSack.cpp  TestAllocator.cpp  TestAudioBuffer.cpp  TestAudioRingBuffer.cpp  TestBufferCommon.hpp  TestBus.cpp  TestCommon.h  TestCommon.hpp  TestConvolver.cpp  TestConvolver.hpp  TestConvolverBrute.cpp  TestConvolverFFT.cpp  TestConvolverFFT.cxx  TestConvolverNew.cpp  TestConvolverOld.cpp  TestConvolverRef.cpp  TestEventBus.cpp  TestFFT.cpp  TestFFT.hpp  TestFFTOoura.cpp  TestFFTpffft.cc  TestFFTpffft.cpp  TestFile.cpp  TestFixedPool.cpp  TestHandleBuffer.broken_cpp  TestHandleBuffer.cpp  TestHeapBuffer.cpp  TestLimits.cpp  TestLogger.cpp  TestMath.cpp  TestMemory.cpp  TestMemoryCheck.cpp  TestMove.cpp  (+17 more)
types/: TBus.h  TFile.h  TFile.hpp  THeapBuffer.h  THeapBuffer.hpp  TMutex.h  TPointerList.h  TRingBuffer.h  TStack.h
util/: NoCopy.h  TAssert.h  TLeakChecker.h  TMath.h  TMemory.hpp  TMemoryManager.hpp  TTimer.h  TUUID.h
(+93 files in other folders)
